# gbmu

./: .gitignore  Cargo.toml  LICENSE  README.md  launch-test.sh
.github/workflows/: release.yaml  rust.yml
cgb-test-roms/: bg_oam_priority.gbc  hblank_vram_dma.gbc  key0_lock_after_boot.gbc  oam_internal_priority.gbc
cpu2/: caca.excalidraw  dontmindme.md
cpu2/src/: accumulator.rs  cb_operations.rs  defines.rs  flags.rs  implemenation.rs  main.rs  operations.rs
cpu2/src/instructions/: add.rs  and_or_xor.rs  cond.rs  cp.rs  inc_dec.rs  load.rs  load_a.rs  load_b.rs  load_c.rs  load_d.rs  load_e.rs  load_f.rs  load_h.rs  load_l.rs  load_r16.rs  mod.rs  other.rs  sub.rs
documentation/mmu/: interrupt.md  mbc.md  mmu.md  oam.md  timers.md
src/: app.rs  cli.rs  communications.rs  cpu.rs  cpu_def.rs  debugger.rs  file.rs  gameboy.rs  main.rs  mmu.rs  ppu.rs  sound.rs
src/communications/: game_tool.rs  interface_tool.rs  tests.rs
src/cpu/: block0.rs  block1.rs  block2.rs  block3.rs  block_prefix.rs  cb_instructions.rs  cb_operations.rs  defines.rs  flags.rs  flags_registers.rs  instructions.rs  operations.rs  ops8.rs  registers.rs  utils.rs
src/cpu/ops/: add.rs  and_or_xor.rs  cond.rs  cp.rs  inc_dec.rs  load.rs  other.rs  sub.rs
src/cpu/tests/: instructions_lists.rs  micro_ops.rs  mod.rs
src/gui/: keymapping.rs  mod.rs
src/gui/views/: mod.rs  (+3 more)
src/mmu/: apu.rs  interrupt.rs  mbc.rs  oam.rs  timers.rs  vram.rs
src/ppu/: colors_palette.rs  lcd_control.rs  lcd_status.rs  oam_fetcher.rs  obj_piso.rs  pixel.rs  pixel_fetcher.rs  pixel_fifo.rs  vram.rs  wram.rs
(+11 files in other folders)
