[package]
name = "gbmu"
version = "0.3.0"
edition = "2024"

[dependencies]
egui = "0.34.1"
eframe = "0.34.0"
egui-file-dialog = "0.13.0"
egui_extras = "0.34.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

pixels = "0.15.0"
winit = "0.30.11"
tokio = { version = "1.46.1", features = ["full"] }
flamegraph = "0.6.11"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "cargo"] }
cpal = "0.17.3"
